src/objects/BFM_IVA__c.object
<CustomObject>
    <description>Object that covers the Tax information - Brazil Freights Project</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Base__c</fullName>
        <label>Excluded Base</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Base__c</fullName>
        <label>Other Base</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SES__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SES</label>
        <referenceTo>BFM_SES__c</referenceTo>
        <relationshipLabel>IVAs</relationshipLabel>
        <relationshipName>IVAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Base__c</fullName>
        <label>Tax Base</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_group__c</fullName>
        <label>Tax group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withheld__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Withheld</label>
        <type>Checkbox</type>
    </fields>
    <label>IVA</label>
    <nameField>
        <displayFormat>IVA - {00000}</displayFormat>
        <label>IVA Salesforce Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>